Fix width on mobile devices

--- a/input/scss/mobile.css
+++ b/input/scss/mobile.css
@@ -1,7 +1,6 @@
 body {
 	margin: 0;
 	grid-gap: 0;
-	min-width: 40rem;
 }
 
 aside {
